# iso3166-2

./: .gitignore  .readthedocs.yml  API.md  ATTRIBUTES.md  LICENSE  MANIFEST.in  README.md  ToDo.md  UPDATES.md  getISO3166_2.py  get_iso3166_2.py  iso3166-2.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: CHANGELOG.md  README.md  build_test.yml  check_for_updates.yml  deploy_pypi.yml  deploy_test_pypi.yml  deploy_testpypi.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  requirements.txt  usage.rst
docs/source/: conf.py  index.rst  iso3166_2.rst
iso3166-2-check-for-updates/: README.md  check_for_updates.py  requirements.txt
iso3166-2-updates/: README.md  local_names.csv
iso3166_2/: README.md  __init__.py  iso3166-2.json  iso3166_2.py
iso3166_2/iso3166-2-data/: README.md  iso3166-2-min.json  iso3166-2.json
iso3166_2/iso3166_2_data/: README.md  iso3166-2.json
iso3166_2_resources/: README.md  UPDATES.md  geo_cache.csv  geo_cache_min.csv  iso3166-2-export.csv  iso3166-2-export.xml  iso3166-2-metadata.json  iso366-2-export.csv  iso366-2-export.xml  language_lookup.json  local_other_names_original.csv  subdivision_updates.csv
iso3166_2_scripts/: README.md  get_iso3166_2.py  update_subdivisions.py
iso3166_2_updates/: README.md  UPDATES.md  local_names.csv  subdivision_updates.csv
scripts/: README.md  __init__.py  city_data.py  export_iso3166_2.py  export_iso3166_2_metadata.py  geo.py  get_iso3166_2.py  history.py  language_lookup.py  local_other_names.py  main.py  metadata.py  requirements.txt  restcountries_api.py  update_subdivisions.py  utils.py
tests/: README.md  requirements.txt  test_city_data.py  test_export_iso3166_2.py  test_geo.py  test_get_iso3166_2.py  test_history.py  test_iso3166_2.py  test_iso3166_2_api.py  test_iso3166_2_metadata.py  test_language_lookup.py  test_local_other_names.py  test_main.py  test_metadata.py  test_restcountries_api.py  test_update_subdivisions.py  test_utils.py
tests/test_files/: README.md  test_geo_cache.csv  test_iso3166-2.json  test_language_lookup.csv  test_language_lookup.md  test_local_other_names.csv  test_subdivision_updates.csv
