[metadata]
name = iso3166-2
version = 1.4.0
description = A lightweight Python package, and accompanying API, that can be used to access all of the worlds most up-to-date and accurate ISO 3166-2 subdivision data, including: name, local name, code, parent code, type, latitude/longitude and flag.
author = AJ McKenna
author_email = amckenna41@qub.ac.uk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amckenna41/iso3166-2
download_url = https://github.com/amckenna41/iso3166-2/archive/refs/heads/main.zip
license = MIT
maintainer = AJ McKenna
status = Production
keywords = 
    iso
    iso3166
    beautifulsoup
    python
    pypi
    countries
    country codes
    iso3166-2
    iso3166-1
    alpha-2
    iso3166-updates
    rest-countries

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable,
    Environment :: Console,
    Intended Audience :: Developers,
    Intended Audience :: Science/Research,
    Intended Audience :: Information Technology,
    License :: OSI Approved :: MIT License,
    License :: Free For Educational Use,
    Natural Language :: English,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,	
    Programming Language :: Python :: Implementation :: PyPy,
    Programming Language :: Python :: 3 :: Only,
    Topic :: Scientific/Engineering,
    Topic :: Scientific/Engineering :: Information Analysis,
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:

install_requies =
    iso3166
    natsort

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*
